--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,47 +1,28 @@
-# JWT #
-#security.jwt.secret=ChangeThisSecretToAStrongOne1234567890
-#security.jwt.expiration-seconds=3600
-
-# DB Configuration #
-#spring.datasource.url=jdbc:mysql://localhost:3306/seguridad_accesos?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
-#spring.datasource.username=root
-#spring.datasource.password=root
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# JPA/Hibernate #
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-#spring.jpa.properties.hibernate.format_sql=true
-
-
 # JWT
-security.jwt.secret=ChangeThisSecretToAStrongOne1234567890
-security.jwt.expiration-seconds=3600
+security.jwt.secret=${JWT_SECRET:ChangeThisSecretToAStrongOne1234567890}
+security.jwt.expiration-seconds=${JWT_EXPIRATION:3600}
 
-# DB Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/seguridad_accesos?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
-
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# DB Configuration (PostgreSQL en Neon)
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-telegram.bot.token=8224635763:AAG0yEQo6bqNYBi8-lKrskbotjQWqf7_4As
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
 
-# Tamao mximo de archivo individual
+# Tamaño máximo de archivo individual
 spring.servlet.multipart.max-file-size=50MB
-# Tamao mximo total de la peticin multipart
+# Tamaño máximo total de la petición multipart
 spring.servlet.multipart.max-request-size=100MB
 
-# Para compatibilidad con versiones antiguas de Spring Boot
+# Compatibilidad con versiones antiguas de Spring Boot
 spring.http.multipart.max-file-size=50MB
 spring.http.multipart.max-request-size=100MB
 
-
-
+# Server
 server.address=0.0.0.0
 server.port=8080
