Corrección de backend y las fotos a mostrar V1.2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,8 @@ spring.http.multipart.max-request-size=100MB
 # Server
 server.address=0.0.0.0
 server.port=8080
+
+
+# Telegram Bot
+telegram.bot.token=${TELEGRAM_BOT_TOKEN}
+
